objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>ActualStartDate__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BusinessSponsorRequestor__c</fullName>
        <description>To identify if it is business sponsor or requestor</description>
        <label>Business Sponsor/Requestor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <description>A closed date of project</description>
        <inlineHelpText>Date that the project was closed or cancelled</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>To descript the different kind of department</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate Request</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>Data Ops</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>MPA/Client Services</fullName>
                </value>
                <value>
                    <fullName>Natixis</fullName>
                </value>
                <value>
                    <fullName>Natixis Canada</fullName>
                </value>
                <value>
                    <fullName>PRCG</fullName>
                </value>
                <value>
                    <fullName>Product Ops</fullName>
                </value>
                <value>
                    <fullName>Sales General</fullName>
                </value>
                <value>
                    <fullName>Sales Management</fullName>
                </value>
                <value>
                    <fullName>Training and Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A short description for the project</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <formula>IF(ISPICKVAL(LevelOfEffort__c,"Less than 2 Weeks"),"Minimal",
   IF(ISPICKVAL(LevelOfEffort__c,"2 - 4 Weeks"),"Moderate",
     IF(ISPICKVAL(LevelOfEffort__c,"Greater than 4 Weeks"),"Major","")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnhancementOrProject__c</fullName>
        <description>The type of the project</description>
        <label>Enhancement Or Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FunctionalContacts__c</fullName>
        <description>The description of Functional contact of the team</description>
        <label>Functional Contact(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HighLevelRequirements__c</fullName>
        <description>Description of high level requirements</description>
        <label>High Level Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LevelOfEffortWeeks__c</fullName>
        <description>1 day = 0.2</description>
        <label>Level of Effort (weeks)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LevelOfEffort__c</fullName>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 2 Weeks</fullName>
                </value>
                <value>
                    <fullName>2 - 4 Weeks</fullName>
                </value>
                <value>
                    <fullName>Greater than 4 Weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinktoSharePointfolder__c</fullName>
        <description>Providing link to SharePoint folder</description>
        <label>Link to SharePoint Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NextStepsResolutionComments__c</fullName>
        <description>If the stage of the project is Completed or Cancelled, have the formula display the Resolution Comments, otherwise have it display the Next Steps</description>
        <formula>IF (
     OR (ISPICKVAL( Stage__c, "Completed"),
         ISPICKVAL( Stage__c, "Cancelled")),
     ResolutionDetails__c,
      NextSteps__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Steps/Resolution Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextSteps__c</fullName>
        <description>Description for the next steps of the project</description>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>To descript the priority level of the project</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectedStartDate__c</fullName>
        <label>Projected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportTo__c</fullName>
        <description>Used to filter so that only projects related to specific status meetings are shown on reports.</description>
        <label>Report To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales and Marketing</fullName>
                </value>
                <value>
                    <fullName>Natixis Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestedDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>When the business requested the project</inlineHelpText>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResolutionDetails__c</fullName>
        <description>To descript the details of the resolution.</description>
        <label>Resolution Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>To descript the stage of the project</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                    <default>true</default>
                    <label>Proposed</label>
                </value>
                <value>
                    <fullName>NotStarted</fullName>
                    <label>Not Started (Approved)</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                    <isActive>false</isActive>
                    <label>Ongoing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusIndicator__c</fullName>
        <formula>IMAGE( 
CASE( Status__c, 
"Green", "/img/samples/light_green.gif",
"Yellow", "/img/samples/light_yellow.gif",
"Red", "/img/samples/light_red.gif", 
"/s.gif"), 
"status color")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>To descript the status of the project</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetDateClosedDate__c</fullName>
        <description>If the stage of the project is Completed or Cancelled, have the formula display the Closed Date, otherwise have it display the Target Date.</description>
        <formula>IF ( 
     OR (ISPICKVAL( Stage__c, "Completed"), 
         ISPICKVAL( Stage__c, "Cancelled")), 
       ClosedDate__c , 
       TargetDate__c  
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Date/Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TargetDate__c</fullName>
        <description>Showing the target dates</description>
        <inlineHelpText>When the project will be in production.  This should be updated as the project progresses.</inlineHelpText>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechnicalResource1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Resource 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsTechnicalResource1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TechnicalResource2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Resource 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsTechnicalResource2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TechnicalResource3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Resource 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsTechnicalResource3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <formula>IF(NOT(ISBLANK(TargetDate__c)),
CASE(MONTH( TargetDate__c), 
1, "Q1" , 
2, "Q1", 
3, "Q1", 
4, "Q2", 
5, "Q2", 
6, "Q2", 
7, "Q3", 
8, "Q3", 
9, "Q3", 
10, "Q4", 
11, "Q4", 
12, "Q4",
"") 
&amp; " " &amp;
TEXT(YEAR(TargetDate__c )),
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>New Product or Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This Object is to help Veronika and Tom track what do they work</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>InProgressAllProjects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress All Projects</label>
    </listViews>
    <listViews>
        <fullName>InProgressMyProjects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress My Projects</label>
    </listViews>
    <listViews>
        <fullName>Legal_Complaince_Projects</fullName>
        <columns>NAME</columns>
        <columns>BusinessSponsorRequestor__c</columns>
        <columns>Description__c</columns>
        <columns>FunctionalContacts__c</columns>
        <columns>NextSteps__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Legal &amp; Compliance</value>
        </filters>
        <label>Legal &amp; Complaince Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <columns>Description__c</columns>
        <columns>TechnicalResource1__c</columns>
        <columns>TechnicalResource2__c</columns>
        <columns>TechnicalResource3__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My Open Projects</label>
    </listViews>
    <listViews>
        <fullName>Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Type__c</columns>
        <columns>Effort__c</columns>
        <columns>LevelOfEffort__c</columns>
        <columns>TargetDate__c</columns>
        <columns>FunctionalContacts__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Proposed,Approved</value>
        </filters>
        <label>Open Projects</label>
    </listViews>
    <listViews>
        <fullName>Proposed_Projects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>In Progress,Stalled,Cancelled,Completed</value>
        </filters>
        <label>Proposed &amp; Approved Projects</label>
    </listViews>
    <listViews>
        <fullName>Queued_Projects</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>Status__c</columns>
        <columns>Department__c</columns>
        <columns>StatusIndicator__c</columns>
        <columns>FunctionalContacts__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Stalled,Cancelled,Completed</value>
        </filters>
        <label>Queued Projects - Open</label>
        <queue>SFDC_Projects</queue>
    </listViews>
    <listViews>
        <fullName>Queued_ProjectsBC</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Stage__c</columns>
        <columns>FunctionalContacts__c</columns>
        <columns>BusinessSponsorRequestor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Stalled,Cancelled,Completed</value>
        </filters>
        <label>Queued Projects - Brian Caitlyn</label>
    </listViews>
    <listViews>
        <fullName>SFDC_Projects_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>SFDC Projects</label>
        <queue>SFDC_Projects</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Status_Reporting_Internal_Only</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportTo__c</field>
            <operation>excludes</operation>
            <value>Sales,Sales and Marketing,NGAM Canada</value>
        </filters>
        <label>Status Reporting - Internal Only</label>
    </listViews>
    <listViews>
        <fullName>Status_Reporting_Natixis_Canada</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportTo__c</field>
            <operation>includes</operation>
            <value>Natixis Canada</value>
        </filters>
        <label>Status Reporting - Natixis Canada</label>
    </listViews>
    <listViews>
        <fullName>Status_Reporting_Sales</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportTo__c</field>
            <operation>includes</operation>
            <value>Sales</value>
        </filters>
        <label>Status Reporting - Sales</label>
    </listViews>
    <listViews>
        <fullName>Status_Reporting_Sales_and_Marketing</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportTo__c</field>
            <operation>includes</operation>
            <value>Sales and Marketing</value>
        </filters>
        <label>Status Reporting - Sales and Marketing</label>
    </listViews>
</CustomObject>